test/tests/stages/8_loops/invalid_parse/missing_for_header_clauses.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  const int(2)
  +
  const int(2)
  ==
  const int(4)
  )
  ;
  return
  const int(0)
  ;
  }
